fix: stops shapes from being stretched

--- a/src/App.css
+++ b/src/App.css
@@ -70,12 +70,12 @@
 
 .canvas-container div {
   width: 90%;
-  height: 90%;
+  height: auto;
 }
 
 .canvas-container div canvas {
   width: 100%;
-  height: 100%;
+  height: auto;
   display: block;
 }
 
